<resources>
    <string name="app_name">Bottom Tabs</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="cart">Cart</string>
    <string name="setting">Setting</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_first_sub_fragment">Hello First Sub Fragment</string>
    <string name="hello_second_sub_fragment">Hello Second Sub Fragment</string>
</resources>